# rust-finger

./: Cargo.toml  README.md  package.sh  process_icon.py
assets/: rust-finger.desktop
src/: listener.rs  main.rs  stats.rs
src/ui/: app.rs  charts.rs  dashboard.rs  keyboard_heatmap.rs  mod.rs
